--- a/Omdb Movie App-I/index.html
+++ b/Omdb Movie App-I/index.html
@@ -4,22 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OMDB Movie App</title>
+    <title>OMDB MOVIE APP</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="container">
-        <!-- <div class="card">
-            <img src="http://via.placeholder.com/600/92c952" alt="no img">
-            <h2>Lorem ipsum dolor sit amet.</h2>
+        <div>
+            <h1>Search Movie:</h1>
+            <input type="text" class="form-control" placeholder="Search Movie Title..." id="movie-name"><br><br>
+            <button onclick="loadMovies()">Search</button>
         </div>
-    </div> -->
-
+        <br>
+        <div id="movieInfo">
+        </div>
     </div>
-    <div id="pageButton"></div>
 </body>
+<script src="./script.js"></script>
 
 </html>
-
-<script src="./script.js"></script>
