--- a/local storage/index.html
+++ b/local storage/index.html
@@ -10,22 +10,25 @@
 
 <body>
     <div id="container">
-        <form>
+        <div>
+            <form>
+                <label>Username</label>
+                <input type="text" id="name">
+                <label>Age</label>
+                <input type="number" id="age">
+                <input type="submit" id="submit">
+            </form>
+        </div>
+        <br>
+        <div>
             <table>
-                <tr>
-                    <td><label>Username</label></td>
-                    <td><input type="text" id="name"></td>
-                </tr>
-                <tr>
-                    <td><label>Age</label></td>
-                    <td><input type="number" id="age"></td>
-                </tr>
-                <tr>
-                    <td><input type="submit" id="submit"></td>
-                </tr>
-            </table>
-        </form>
+                <thead>
 
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
